lib/tests/fixtures/compiler/parser/next_in_node.baseline
Error: next_in_node.pp:3:9: next statement cannot be used inside a node statement.
  next
  ^~~~
