lib/tests/fixtures/compiler/parser/next_in_node.pp
node foo {
    if true {
        next
    }
}
